Compatible with JDK 11 & 17
Runtime compatibility for JDK 11 & 17